// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiles TypeScript - fork checker 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/compiles-forked/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
Starting type checking service...
(node:11111) [DEP_WEBPACK_MODULE_ERRORS] DeprecationWarning: Module.errors was removed (use getErrors instead)
  size  name         module                                                       status
  1000               ./js/SomeLibrary.ts                                          built
  1 kB  131          (node_modules)/@babel/runtime/helpers/esm/createClass.js     built
  1 kB  315          (node_modules)/@babel/runtime/helpers/esm/classCallCheck.js  built
  1 kB  810          ./js/script.ts + 1 modules                                   built

  size  name         asset                                                        status
  1 kB  default      myBundle.min.js                                              emitted
  1 kB  someLibrary  someLibrary.myBundle.min.js                                  emitted

  (9 modules hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles TypeScript - fork checker 2`] = `
"(function(e,n){if(\\"object\\"===typeof exports&&\\"object\\"===typeof module)module.exports=n();else if(\\"function\\"===typeof define&&define.amd)define([],n);else{var r=n();for(var t in r)(\\"object\\"===typeof exports?exports:e)[t]=r[t]}})(self,(function(){return function(){\\"use strict\\";var e={315:function(e,n,r){function t(e,n){if(!(e instanceof n))throw new TypeError(\\"Cannot call a class as a function\\")}r.d(n,{Z:function(){return t}})},131:function(e,n,r){function t(e,n){for(var r=0;r<n.length;r++){var t=n[r];t.enumerable=t.enumerable||!1,t.configurable=!0,\\"value\\"in t&&(t.writable=!0),Object.defineProperty(e,t.key,t)}}function o(e,n,r){return n&&t(e.prototype,n),r&&t(e,r),e}r.d(n,{Z:function(){return o}})},810:function(e,n,r){r.r(n),r.d(n,{default:function(){return u}});var t=r(315);var o=r(131);function i(e,n){return e+n}var u=function(){function e(){(0,t.Z)(this,e),console.log(\\"init class\\")}return(0,o.Z)(e,[{key:\\"method\\",value:function(){console.log(i(2,4)),r.e(399).then(r.bind(r,0)).then((function(e){var n=new e.default;console.log(n.add(2,4))}))}}]),e}()}};var n={};function r(t){if(n[t])return n[t].exports;var o=n[t]={exports:{}};return e[t](o,o.exports,r),o.exports}return r.m=e,r.d=function(e,n){for(var t in n)r.o(n,t)&&!r.o(e,t)&&Object.defineProperty(e,t,{enumerable:!0,get:n[t]})},r.f={},r.e=function(e){return Promise.all(Object.keys(r.f).reduce((function(n,t){return r.f[t](e,n),n}),[]))},r.u=function(e){return\\"someLibrary.myBundle.min.js\\"},r.o=function(e,n){return Object.prototype.hasOwnProperty.call(e,n)},function(){var e={};r.l=function(n,t,o){if(e[n])return void e[n].push(t);var i,u;if(void 0!==o){var a=document.getElementsByTagName(\\"script\\");for(var f=0;f<a.length;f++){var c=a[f];if(c.getAttribute(\\"src\\")==n){i=c;break}}}i||(u=!0,i=document.createElement(\\"script\\"),i.charset=\\"utf-8\\",i.timeout=120,r.nc&&i.setAttribute(\\"nonce\\",r.nc),i.src=n),e[n]=[t];var l=function(r,t){i.onerror=i.onload=null,clearTimeout(s);var o=e[n];if(delete e[n],i.parentNode&&i.parentNode.removeChild(i),o&&o.forEach((function(e){return e(t)})),r)return r(t)};var s=setTimeout(l.bind(null,void 0,{type:\\"timeout\\",target:i}),12e4);i.onerror=l.bind(null,i.onerror),i.onload=l.bind(null,i.onload),u&&document.head.appendChild(i)}}(),r.r=function(e){\\"undefined\\"!==typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:\\"Module\\"}),Object.defineProperty(e,\\"__esModule\\",{value:!0})},r.p=\\"\\",function(){var e={913:0};r.f.j=function(n,t){var o=r.o(e,n)?e[n]:void 0;if(0!==o)if(o)t.push(o[2]);else{var i=new Promise((function(r,t){o=e[n]=[r,t]}));t.push(o[2]=i);var u=r.p+r.u(n);var a=new Error;var f=function(t){if(r.o(e,n)&&(o=e[n],0!==o&&(e[n]=void 0),o)){var i=t&&(\\"load\\"===t.type?\\"missing\\":t.type);var u=t&&t.target&&t.target.src;a.message=\\"Loading chunk \\"+n+\\" failed.\\\\n(\\"+i+\\": \\"+u+\\")\\",a.name=\\"ChunkLoadError\\",a.type=i,a.request=u,o[1](a)}};r.l(u,f,\\"chunk-\\"+n)}};var n=function(n){var t=n[0];var i=n[1];var u=n[2];var a,f,c=0,l=[];for(;c<t.length;c++)f=t[c],r.o(e,f)&&e[f]&&l.push(e[f][0]),e[f]=0;for(a in i)r.o(i,a)&&(r.m[a]=i[a]);u&&u(r),o(n);while(l.length)l.shift()()};var t=self.webpackJsonp_UNIQID=self.webpackJsonp_UNIQID||[];var o=t.push.bind(t);t.push=n}(),r(810)}()}));
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Compiles TypeScript - fork checker 3`] = `
"(self.webpackJsonp_UNIQID=self.webpackJsonp_UNIQID||[]).push([[399],[function(n,u,e){\\"use strict\\";e.r(u),e.d(u,{default:function(){return a}});var t=e(315);var r=e(131);var a=function(){function n(){(0,t.Z)(this,n)}return(0,r.Z)(n,[{key:\\"add\\",value:function(n,u){return n+u}},{key:\\"substract\\",value:function(n,u){return n-u}},{key:\\"divide\\",value:function(n,u){return n/u}}]),n}()}]]);
//# sourceMappingURL=someLibrary.myBundle.min.js.map"
`;

exports[`Compiles TypeScript 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/compiles/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
(node:11111) [DEP_WEBPACK_COMPILATION_ASSETS] DeprecationWarning: Compilation.assets will be frozen in future, all modifications are deprecated.
BREAKING CHANGE: No more changes should happen to Compilation.assets after sealing the Compilation.
	Do changes to assets earlier, e. g. in Compilation.hooks.processAssets.
	Make sure to select an appropriate stage from Compilation.PROCESS_ASSETS_STAGE_*.
  size  name     module                                                       status
  1000           ./js/SomeLibrary.ts                                          built
  1 kB  131      (node_modules)/@babel/runtime/helpers/esm/createClass.js     built
  1 kB  315      (node_modules)/@babel/runtime/helpers/esm/classCallCheck.js  built
  1 kB  810      ./js/script.ts + 1 modules                                   built

  size  name     asset                                                        status
  1 kB  js       0.myBundle.min.js                                            emitted
  1 kB  ts       js/Component.d.ts                                            emitted
  1 kB  ts       js/SomeLibrary.d.ts                                          emitted
  1 kB  ts       js/script.d.ts                                               emitted
  1 kB  default  myBundle.min.js                                              emitted

  (9 modules hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;

exports[`Compiles TypeScript 2`] = `
"(function(e,n){if(\\"object\\"===typeof exports&&\\"object\\"===typeof module)module.exports=n();else if(\\"function\\"===typeof define&&define.amd)define([],n);else{var r=n();for(var t in r)(\\"object\\"===typeof exports?exports:e)[t]=r[t]}})(self,(function(){return function(){\\"use strict\\";var e={315:function(e,n,r){function t(e,n){if(!(e instanceof n))throw new TypeError(\\"Cannot call a class as a function\\")}r.d(n,{Z:function(){return t}})},131:function(e,n,r){function t(e,n){for(var r=0;r<n.length;r++){var t=n[r];t.enumerable=t.enumerable||!1,t.configurable=!0,\\"value\\"in t&&(t.writable=!0),Object.defineProperty(e,t.key,t)}}function o(e,n,r){return n&&t(e.prototype,n),r&&t(e,r),e}r.d(n,{Z:function(){return o}})},810:function(e,n,r){r.r(n),r.d(n,{default:function(){return u}});var t=r(315);var o=r(131);function i(e,n){return e+n}var u=function(){function e(){(0,t.Z)(this,e),console.log(\\"init class\\")}return(0,o.Z)(e,[{key:\\"method\\",value:function(){console.log(i(2,4)),r.e(0).then(r.bind(r,0)).then((function(e){var n=new e.default;console.log(n.add(2,4))}))}}]),e}()}};var n={};function r(t){if(n[t])return n[t].exports;var o=n[t]={exports:{}};return e[t](o,o.exports,r),o.exports}return r.m=e,r.d=function(e,n){for(var t in n)r.o(n,t)&&!r.o(e,t)&&Object.defineProperty(e,t,{enumerable:!0,get:n[t]})},r.f={},r.e=function(e){return Promise.all(Object.keys(r.f).reduce((function(n,t){return r.f[t](e,n),n}),[]))},r.u=function(e){return e+\\".myBundle.min.js\\"},r.o=function(e,n){return Object.prototype.hasOwnProperty.call(e,n)},function(){var e={};r.l=function(n,t,o){if(e[n])return void e[n].push(t);var i,u;if(void 0!==o){var a=document.getElementsByTagName(\\"script\\");for(var f=0;f<a.length;f++){var c=a[f];if(c.getAttribute(\\"src\\")==n){i=c;break}}}i||(u=!0,i=document.createElement(\\"script\\"),i.charset=\\"utf-8\\",i.timeout=120,r.nc&&i.setAttribute(\\"nonce\\",r.nc),i.src=n),e[n]=[t];var l=function(r,t){i.onerror=i.onload=null,clearTimeout(s);var o=e[n];if(delete e[n],i.parentNode&&i.parentNode.removeChild(i),o&&o.forEach((function(e){return e(t)})),r)return r(t)};var s=setTimeout(l.bind(null,void 0,{type:\\"timeout\\",target:i}),12e4);i.onerror=l.bind(null,i.onerror),i.onload=l.bind(null,i.onload),u&&document.head.appendChild(i)}}(),r.r=function(e){\\"undefined\\"!==typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:\\"Module\\"}),Object.defineProperty(e,\\"__esModule\\",{value:!0})},r.p=\\"\\",function(){var e={913:0};r.f.j=function(n,t){var o=r.o(e,n)?e[n]:void 0;if(0!==o)if(o)t.push(o[2]);else{var i=new Promise((function(r,t){o=e[n]=[r,t]}));t.push(o[2]=i);var u=r.p+r.u(n);var a=new Error;var f=function(t){if(r.o(e,n)&&(o=e[n],0!==o&&(e[n]=void 0),o)){var i=t&&(\\"load\\"===t.type?\\"missing\\":t.type);var u=t&&t.target&&t.target.src;a.message=\\"Loading chunk \\"+n+\\" failed.\\\\n(\\"+i+\\": \\"+u+\\")\\",a.name=\\"ChunkLoadError\\",a.type=i,a.request=u,o[1](a)}};r.l(u,f,\\"chunk-\\"+n)}};var n=function(n){var t=n[0];var i=n[1];var u=n[2];var a,f,c=0,l=[];for(;c<t.length;c++)f=t[c],r.o(e,f)&&e[f]&&l.push(e[f][0]),e[f]=0;for(a in i)r.o(i,a)&&(r.m[a]=i[a]);u&&u(r),o(n);while(l.length)l.shift()()};var t=self.webpackJsonp_UNIQID=self.webpackJsonp_UNIQID||[];var o=t.push.bind(t);t.push=n}(),r(810)}()}));
//# sourceMappingURL=myBundle.min.js.map"
`;

exports[`Compiles TypeScript 3`] = `
"(self.webpackJsonp_UNIQID=self.webpackJsonp_UNIQID||[]).push([[0],[function(n,u,e){\\"use strict\\";e.r(u),e.d(u,{default:function(){return a}});var t=e(315);var r=e(131);var a=function(){function n(){(0,t.Z)(this,n)}return(0,r.Z)(n,[{key:\\"add\\",value:function(n,u){return n+u}},{key:\\"substract\\",value:function(n,u){return n-u}},{key:\\"divide\\",value:function(n,u){return n/u}}]),n}()}]]);
//# sourceMappingURL=0.myBundle.min.js.map"
`;

exports[`Compiles TypeScript 4`] = `
"export default class SomeLibrary {
    add(a: any, b: any): any;
    substract(a: any, b: any): number;
    divide(a: any, b: any): number;
}
"
`;

exports[`Fails gracefully on broken markup 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/fails/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...
  size  name  module                          status
  1 kB  591   ./js/typescript.ts + 2 modules  built failed ✖

  (2 assets, 5 modules hidden)

  Failed to compile.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/fails/js/typescript.ts
  14:0  error  Parsing error: Unexpected token. A constructor, method, accessor, or property was expected

✖ 1 problem (1 error, 0 warnings)

[tsl] ERROR in __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/fails/js/typescript.ts(14,1)
      TS1068: Unexpected token. A constructor, method, accessor, or property was expected.

  Δt ____ms ✖ 2 problems (2 errors, 0 warnings)

[__:__:__] 'js_myTSBundle' errored after ____ ms
[__:__:__] Webpack compilation failed
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
(node:11111) [DEP_WEBPACK_COMPILATION_ASSETS] DeprecationWarning: Compilation.assets will be frozen in future, all modifications are deprecated.
BREAKING CHANGE: No more changes should happen to Compilation.assets after sealing the Compilation.
	Do changes to assets earlier, e. g. in Compilation.hooks.processAssets.
	Make sure to select an appropriate stage from Compilation.PROCESS_ASSETS_STAGE_*.
",
}
`;

exports[`Fails gracefully on invalid TS - fork checker 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid-forked/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...
Starting type checking service...
(node:11111) [DEP_WEBPACK_MODULE_ERRORS] DeprecationWarning: Module.errors was removed (use getErrors instead)
  size  name  module                          status
  1 kB  591   ./js/typescript.ts + 2 modules  built failed ✖

  (1 asset, 5 modules hidden)

  Failed to compile.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid-forked/js/typescript.ts
   2:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   3:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
   3:9   warning  Unexpected console statement        no-console
   5:1   error    Replace \`········\` with \`····\`      @swissquote/swissquote/prettier/prettier
   5:13  error    'D' was used before it was defined  @swissquote/swissquote/@typescript-eslint/no-use-before-define
   6:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   8:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   9:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
   9:9   error    Unexpected alert                    no-alert
  10:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  14:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  15:1   error    Replace \`········\` with \`····\`      @swissquote/swissquote/prettier/prettier
  15:9   warning  Unexpected console statement        no-console
  16:1   error    Replace \`····\` with \`··\`            @swissquote/swissquote/prettier/prettier
  18:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  19:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
  19:9   error    Unexpected alert                    no-alert
  20:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier

✖ 18 problems (16 errors, 2 warnings)
  13 errors and 0 warnings potentially fixable with the \`--fix\` option.

  Δt ____ms ✖ 1 problem (1 error, 0 warnings)

[__:__:__] 'js_myTSBundle' errored after ____ ms
[__:__:__] Webpack compilation failed
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
",
}
`;

exports[`Fails gracefully on invalid TS 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myTSBundle' ...
  size  name  module                          status
  1 kB  591   ./js/typescript.ts + 2 modules  built failed ✖

  (2 assets, 5 modules hidden)

  Failed to compile.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid/js/typescript.ts
   2:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   3:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
   3:9   warning  Unexpected console statement        no-console
   5:1   error    Replace \`········\` with \`····\`      @swissquote/swissquote/prettier/prettier
   5:13  error    'D' was used before it was defined  @swissquote/swissquote/@typescript-eslint/no-use-before-define
   6:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   8:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
   9:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
   9:9   error    Unexpected alert                    no-alert
  10:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  14:3   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  15:1   error    Replace \`········\` with \`····\`      @swissquote/swissquote/prettier/prettier
  15:9   warning  Unexpected console statement        no-console
  16:1   error    Replace \`····\` with \`··\`            @swissquote/swissquote/prettier/prettier
  18:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier
  19:1   error    Delete \`····\`                       @swissquote/swissquote/prettier/prettier
  19:9   error    Unexpected alert                    no-alert
  20:1   error    Delete \`··\`                         @swissquote/swissquote/prettier/prettier

✖ 18 problems (16 errors, 2 warnings)
  13 errors and 0 warnings potentially fixable with the \`--fix\` option.

[tsl] ERROR in __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/invalid/js/typescript.ts(5,17)
      TS2339: Property 'someNonExistingMethod' does not exist on type 'D'.

  Δt ____ms ✖ 2 problems (2 errors, 0 warnings)

[__:__:__] 'js_myTSBundle' errored after ____ ms
[__:__:__] Webpack compilation failed
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
(node:11111) [DEP_WEBPACK_COMPILATION_ASSETS] DeprecationWarning: Compilation.assets will be frozen in future, all modifications are deprecated.
BREAKING CHANGE: No more changes should happen to Compilation.assets after sealing the Compilation.
	Do changes to assets earlier, e. g. in Compilation.hooks.processAssets.
	Make sure to select an appropriate stage from Compilation.PROCESS_ASSETS_STAGE_*.
",
}
`;

exports[`Lints TypeScript with webpack 1`] = `
Object {
  "status": 1,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
  size  name  module                                                       status
  1000        ./js/SomeLibrary.ts                                          built
  1 kB  131   (node_modules)/@babel/runtime/helpers/esm/createClass.js     built
  1 kB  315   (node_modules)/@babel/runtime/helpers/esm/classCallCheck.js  built
  1 kB  810   ./js/script.ts + 1 modules                                   built failed ✖

  (5 assets, 9 modules hidden)

  Failed to compile.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/js/Component.ts
  1:1  error  Replace \`⏎export·function·test(a:\` with \`export·function·test(a:·\`  @swissquote/swissquote/prettier/prettier
  3:1  error  Replace \`···return·a·+···\` with \`··return·a·+\`                      @swissquote/swissquote/prettier/prettier

✖ 2 problems (2 errors, 0 warnings)
  2 errors and 0 warnings potentially fixable with the \`--fix\` option.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/js/SomeLibrary.ts
  10:15  error  Delete \`⏎·\`  @swissquote/swissquote/prettier/prettier

✖ 1 problem (1 error, 0 warnings)
  1 error and 0 warnings potentially fixable with the \`--fix\` option.

__PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/lints/js/script.ts
   1:1   error    Replace \`⏎import·{\` with \`import·{·\`                   @swissquote/swissquote/prettier/prettier
   5:1   error    Replace \`····constructor·\` with \`··constructor\`        @swissquote/swissquote/prettier/prettier
   6:5   warning  Unexpected console statement                           no-console
   7:1   error    Insert \`·\`                                             @swissquote/swissquote/prettier/prettier
  10:5   warning  Unexpected console statement                           no-console
  10:17  error    Replace \`·test(·\` with \`test(\`                         @swissquote/swissquote/prettier/prettier
  12:34  error    Replace \`·SomeLibrary·=>⏎···\` with \`(SomeLibrary)·=>\`  @swissquote/swissquote/prettier/prettier
  16:7   warning  Unexpected console statement                           no-console
  17:7   error    Insert \`;\`                                             @swissquote/swissquote/prettier/prettier

✖ 9 problems (6 errors, 3 warnings)
  6 errors and 0 warnings potentially fixable with the \`--fix\` option.

  Δt ____ms ✖ 3 problems (3 errors, 0 warnings)

[__:__:__] 'js_myBundle' errored after ____ ms
[__:__:__] Webpack compilation failed
[__:__:__] 'js' errored after ____ ms
[__:__:__] 'default' errored after ____ ms
(node:11111) [DEP_WEBPACK_COMPILATION_ASSETS] DeprecationWarning: Compilation.assets will be frozen in future, all modifications are deprecated.
BREAKING CHANGE: No more changes should happen to Compilation.assets after sealing the Compilation.
	Do changes to assets earlier, e. g. in Compilation.hooks.processAssets.
	Make sure to select an appropriate stage from Compilation.PROCESS_ASSETS_STAGE_*.
",
}
`;

exports[`Removes unused classes 1`] = `
Object {
  "status": 0,
  "stdall": "
[__:__:__] Starting Crafty __version__...
[__:__:__] Files will be stored in:
            js: __PATH__/packages/integration/fixtures/crafty-preset-typescript-webpack/tree-shaking/dist/js
[__:__:__] Starting 'default' ...
[__:__:__] Starting 'js' ...
[__:__:__] Starting 'js_myBundle' ...
(node:11111) [DEP_WEBPACK_COMPILATION_ASSETS] DeprecationWarning: Compilation.assets will be frozen in future, all modifications are deprecated.
BREAKING CHANGE: No more changes should happen to Compilation.assets after sealing the Compilation.
	Do changes to assets earlier, e. g. in Compilation.hooks.processAssets.
	Make sure to select an appropriate stage from Compilation.PROCESS_ASSETS_STAGE_*.
  size  name     module                       status
  1 kB  391      ./js/index.ts + 3 modules    built

  size  name     asset                        status
  1 kB  ts       js/imported-typescript.d.ts  emitted
  1 kB  ts       js/index.d.ts                emitted
  1 kB  default  myBundle.min.js              emitted

  (4 modules hidden)

  Compiled successfully!
  Δt ____ms

[__:__:__] Finished 'js_myBundle' after ____ ms
[__:__:__] Finished 'js' after ____ ms
[__:__:__] Finished 'default' after ____ ms
",
}
`;
